--- a/app/src/main/res/layout/activity_display_category.xml
+++ b/app/src/main/res/layout/activity_display_category.xml
@@ -5,15 +5,13 @@
     android:layout_height="match_parent"
     >
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp">
+
 
         <LinearLayout
 
             android:background="@color/colorPrimary"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="50dp"
             android:orientation="horizontal"
 
 
@@ -46,6 +44,40 @@
 
 
         </LinearLayout>
+
+
+
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+           >
+
+            <TextView
+                android:id="@+id/projected"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/actual"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"></ListView>
+
+
+
+        </LinearLayout>
+
 
         <RelativeLayout
             android:layout_width="match_parent"
