--- a/app/src/main/res/layout/activity_display_category.xml
+++ b/app/src/main/res/layout/activity_display_category.xml
@@ -18,7 +18,7 @@
             >
 
             <ImageView
-                android:id="@+id/backButton"
+                android:id="@+id/backButtonDisplayCategory"
                 android:layout_weight=".5"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -30,7 +30,7 @@
                 android:background="?android:attr/selectableItemBackgroundBorderless"/>
 
             <TextView
-                android:id="@+id/category"
+                android:id="@+id/categoryDisplayCategory"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_gravity="center"
@@ -60,12 +60,12 @@
            >
 
             <TextView
-                android:id="@+id/projected"
+                android:id="@+id/projectedDisplayCategory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:id="@+id/actual"
+                android:id="@+id/actualDisplayCategory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
