--- a/app/src/main/res/layout/activity_display_category.xml
+++ b/app/src/main/res/layout/activity_display_category.xml
@@ -59,15 +59,40 @@
             android:orientation="vertical"
            >
 
-            <TextView
-                android:id="@+id/projectedDisplayCategory"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:orientation="vertical"
+                android:layout_weight="1">
 
-            <TextView
-                android:id="@+id/actualDisplayCategory"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/editProjectedDisplayCategory"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:clickable="true"
+                        android:src="@drawable/edit_icon"
+                        android:background="?android:attr/selectableItemBackground"/>
+
+                    <TextView
+                        android:id="@+id/projectedDisplayCategory"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/actualDisplayCategory"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
 
             <ListView
                 android:layout_width="match_parent"
