--- a/app/src/main/res/layout/activity_display_income.xml
+++ b/app/src/main/res/layout/activity_display_income.xml
@@ -59,11 +59,25 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             >
+            
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                
+                <ImageView
+                    android:id="@+id/editProjectedDisplayIncome"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:clickable="true"
+                    android:background="?android:attr/selectableItemBackground"/>
 
-            <TextView
-                android:id="@+id/projectedDisplayIncome"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/projectedDisplayIncome"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/actualDisplayIncome"
