--- a/app/src/main/res/layout-v21/activity_display_category.xml
+++ b/app/src/main/res/layout-v21/activity_display_category.xml
@@ -29,6 +29,7 @@
                 android:gravity="left"
                 android:background="?android:attr/selectableItemBackgroundBorderless"/>
 
+
             <TextView
                 android:id="@+id/categoryDisplayCategory"
                 android:layout_marginStart="10dp"
@@ -68,11 +69,35 @@
 
 
                 <LinearLayout
+                    android:padding="30dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1">
+
+                        <TextView
+                            android:layout_gravity="center_vertical"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/projected"
+                            android:textSize="20sp"
+                            />
+
+                       <TextView
+                            android:layout_gravity="center_vertical"
+                            android:id="@+id/projectedTextViewDisplayCategory"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="20sp"/>
+
+                    </LinearLayout>
+
                     <ImageView
+                        android:layout_gravity="center_vertical"
                         android:id="@+id/editProjectedDisplayCategory"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
@@ -80,10 +105,6 @@
                         android:src="@drawable/edit_icon"
                         android:background="?android:attr/selectableItemBackgroundBorderless"/>
 
-                    <TextView
-                        android:id="@+id/projectedDisplayCategory"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
 
                 </LinearLayout>
 
