--- a/app/src/main/res/layout/activity_display_category.xml
+++ b/app/src/main/res/layout/activity_display_category.xml
@@ -7,43 +7,44 @@
 
 
 
-        <LinearLayout
+    <LinearLayout
 
-            android:background="@color/colorPrimary"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:orientation="horizontal"
-
-
-            >
-
-            <ImageView
-                android:id="@+id/backButtonDisplayCategory"
-                android:layout_weight=".5"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:src="@drawable/white_back_thin"
-                android:clickable="true"
-                android:paddingTop="17dp"
-                android:paddingBottom="17dp"
-                android:gravity="left"
-                android:background="?android:attr/selectableItemBackground"/>
-
-            <TextView
-                android:id="@+id/categoryDisplayCategory"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_gravity="center"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:textStyle="bold"
-                android:textColor="#FFFFFF"
-                android:typeface="normal"
-                android:textSize="20sp"/>
+        android:background="@color/colorPrimary"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
 
 
-        </LinearLayout>
+        >
+
+        <ImageView
+            android:id="@+id/backButtonDisplayCategory"
+            android:layout_weight=".5"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/white_back_thin"
+            android:clickable="true"
+            android:paddingTop="17dp"
+            android:paddingBottom="17dp"
+            android:gravity="left"
+            android:background="?android:attr/selectableItemBackgroundBorderless"/>
+
+
+        <TextView
+            android:id="@+id/categoryDisplayCategory"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_gravity="center"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:textStyle="bold"
+            android:textColor="#FFFFFF"
+            android:typeface="normal"
+            android:textSize="20sp"/>
+
+
+    </LinearLayout>
 
 
 
@@ -57,7 +58,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-           >
+            >
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -68,11 +69,35 @@
 
 
                 <LinearLayout
+                    android:padding="30dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1">
+
+                        <TextView
+                            android:layout_gravity="center_vertical"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/projected"
+                            android:textSize="20sp"
+                            />
+
+                        <TextView
+                            android:layout_gravity="center_vertical"
+                            android:id="@+id/projectedTextViewDisplayCategory"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="20sp"/>
+
+                    </LinearLayout>
+
                     <ImageView
+                        android:layout_gravity="center_vertical"
                         android:id="@+id/editProjectedDisplayCategory"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
@@ -80,10 +105,6 @@
                         android:src="@drawable/edit_icon"
                         android:background="?android:attr/selectableItemBackground"/>
 
-                    <TextView
-                        android:id="@+id/projectedDisplayCategory"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
 
                 </LinearLayout>
 
@@ -97,7 +118,7 @@
             <ListView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1"></ListView>
+                android:layout_weight="2"></ListView>
 
 
 
