--- a/app/src/main/res/layout/activity_display_income.xml
+++ b/app/src/main/res/layout/activity_display_income.xml
@@ -29,8 +29,9 @@
             android:gravity="left"
             android:background="?android:attr/selectableItemBackground"/>
 
+
         <TextView
-            android:id="@+id/titleDisplayIncome"
+            android:id="@+id/categoryDisplayIncome"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:layout_gravity="center"
@@ -59,35 +60,66 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             >
-            
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                
-                <ImageView
-                    android:id="@+id/editProjectedDisplayIncome"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:clickable="true"
-                    android:background="?android:attr/selectableItemBackground"/>
+                android:layout_height="0dp"
+                android:orientation="vertical"
+                android:layout_weight="1">
+
+
+
+                <LinearLayout
+                    android:padding="30dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1">
+
+                        <TextView
+                            android:layout_gravity="center_vertical"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/projected"
+                            android:textSize="20sp"
+                            />
+
+                        <TextView
+                            android:layout_gravity="center_vertical"
+                            android:id="@+id/projectedTextViewDisplayIncome"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="20sp"/>
+
+                    </LinearLayout>
+
+                    <ImageView
+                        android:layout_gravity="center_vertical"
+                        android:id="@+id/editProjectedDisplayIncome"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:clickable="true"
+                        android:src="@drawable/edit_icon"
+                        android:background="?android:attr/selectableItemBackground"/>
+
+
+                </LinearLayout>
 
                 <TextView
-                    android:id="@+id/projectedDisplayIncome"
+                    android:id="@+id/actualDisplayIncome"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/actualDisplayIncome"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
             <ListView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1"></ListView>
+                android:layout_weight="2"></ListView>
 
 
 
