--- a/app/src/main/res/layout-v21/activity_display_category.xml
+++ b/app/src/main/res/layout-v21/activity_display_category.xml
@@ -1,139 +1,201 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
 
-
-        <LinearLayout
-
-            android:background="@color/colorPrimary"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:orientation="horizontal"
-
-
-            >
-
-            <ImageView
-                android:id="@+id/backButtonDisplayCategory"
-                android:layout_weight=".5"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:src="@drawable/white_back_thin"
-                android:clickable="true"
-                android:paddingTop="17dp"
-                android:paddingBottom="17dp"
-                android:gravity="left"
-                android:background="?android:attr/selectableItemBackgroundBorderless"/>
-
-
-            <TextView
-                android:id="@+id/categoryDisplayCategory"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_gravity="center"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:textStyle="bold"
-                android:textColor="#FFFFFF"
-                android:typeface="normal"
-                android:textSize="20sp"/>
-
-
-        </LinearLayout>
-
-
-
-
-    <FrameLayout
+    <LinearLayout
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="match_parent">
 
-        <LinearLayout
+
+
+            <LinearLayout
+
+                android:background="@color/colorPrimary"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal"
+
+
+                >
+
+                <ImageView
+                    android:id="@+id/backButtonDisplayCategory"
+                    android:layout_weight=".5"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/white_back_thin"
+                    android:clickable="true"
+                    android:paddingTop="17dp"
+                    android:paddingBottom="17dp"
+                    android:gravity="left"
+                    android:background="?android:attr/selectableItemBackgroundBorderless"/>
+
+
+                <TextView
+                    android:id="@+id/categoryDisplayCategory"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_gravity="center"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:textStyle="bold"
+                    android:textColor="#FFFFFF"
+                    android:typeface="normal"
+                    android:textSize="20sp"/>
+
+
+            </LinearLayout>
+
+
+
+
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-           >
+            android:layout_height="0dp"
+            android:layout_weight="1">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:layout_weight="1">
-
-
+               >
 
                 <LinearLayout
                     android:padding="30dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="vertical"
+                    >
+
+
 
                     <LinearLayout
-                        android:layout_width="0dp"
+
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1">
+                        android:orientation="horizontal">
 
-                        <TextView
-                            android:layout_gravity="center_vertical"
-                            android:layout_width="wrap_content"
+                        <LinearLayout
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:text="@string/projected"
-                            android:textSize="20sp"
-                            />
+                            android:layout_weight="1">
 
-                       <TextView
+                            <TextView
+                                android:layout_gravity="center_vertical"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/projected"
+                                android:textSize="20sp"
+                                />
+
+                           <TextView
+                                android:layout_gravity="center_vertical"
+                                android:id="@+id/projectedTextViewDisplayCategory"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textSize="20sp"/>
+
+                        </LinearLayout>
+
+                        <ImageView
                             android:layout_gravity="center_vertical"
-                            android:id="@+id/projectedTextViewDisplayCategory"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="20sp"/>
+                            android:id="@+id/editProjectedDisplayCategory"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:clickable="true"
+                            android:src="@drawable/edit_icon"
+                            android:background="?android:attr/selectableItemBackgroundBorderless"/>
+
 
                     </LinearLayout>
 
-                    <ImageView
-                        android:layout_gravity="center_vertical"
-                        android:id="@+id/editProjectedDisplayCategory"
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:clickable="true"
-                        android:src="@drawable/edit_icon"
-                        android:background="?android:attr/selectableItemBackgroundBorderless"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/spent"
+                            android:textSize="20sp"/>
+
+                        <TextView
+                            android:id="@+id/actualDisplayCategory"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:maxLines="2"
+                            android:textSize="20sp"/>
+
+                        </LinearLayout>
 
                 </LinearLayout>
 
-                <TextView
-                    android:id="@+id/actualDisplayCategory"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                <ListView
+                    android:id="@+id/listViewDisplayCategory"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"></ListView>
+
+
 
             </LinearLayout>
 
-            <ListView
+
+
+
+
+
+
+
+
+
+
+
+
+
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="2"></ListView>
+                android:layout_height="10dp"
+                android:background="@drawable/header_shadow">
+
+            </RelativeLayout>
 
 
 
-        </LinearLayout>
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="10dp"
-            android:background="@drawable/header_shadow">
-
-        </RelativeLayout>
-
-    </FrameLayout>
 
 
 
-</LinearLayout>
+        </FrameLayout>
+
+
+
+
+
+
+    </LinearLayout>
+
+
+    <android.support.design.widget.FloatingActionButton
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_margin="30dp"
+        android:id="@+id/addDisplayCategory"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:elevation="5dp"
+        app:borderWidth="0dp"
+        android:src="@drawable/add_icon_white1"
+        app:rippleColor="@color/colorCirclePressed"
+        app:backgroundTint="@color/colorPrimary"
+        android:layout_gravity="bottom|end"
+        android:clickable="true"
+        />
+
+</android.support.design.widget.CoordinatorLayout>
