--- a/app/src/main/res/layout-v21/activity_display_income.xml
+++ b/app/src/main/res/layout-v21/activity_display_income.xml
@@ -41,8 +41,7 @@
             android:textStyle="bold"
             android:textColor="#FFFFFF"
             android:typeface="normal"
-            android:textSize="20sp"
-            android:text="@string/income"/>
+            android:textSize="20sp"/>
 
 
     </LinearLayout>
@@ -62,15 +61,16 @@
             >
 
             <LinearLayout
+                android:padding="30dp"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_weight="1">
+                >
 
 
 
                 <LinearLayout
-                    android:padding="30dp"
+
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
@@ -109,17 +109,32 @@
 
                 </LinearLayout>
 
-                <TextView
-                    android:id="@+id/actualDisplayIncome"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/spent"
+                        android:textSize="20sp"/>
+
+                    <TextView
+                        android:id="@+id/actualDisplayIncome"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:maxLines="2"
+                        android:textSize="20sp"/>
+
+                </LinearLayout>
 
             </LinearLayout>
 
             <ListView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="2"></ListView>
+                android:layout_weight="1"></ListView>
 
 
 
