--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#3F51B5</color>
     <color name="colorBackgroundList">#FFFFFF</color>
     <color name="colorListGreen">#1D6300</color>
     <color name ="colorListRed">#BC0000</color>
@@ -10,4 +10,6 @@
     <color name="colorCircleOutline">#C0C0C0</color>
     <color name="colorCircleOutlineHeader">#FFFFFF</color>
     <color name="colorLightText">#FFFFFF</color>
+    <color name="colorShadow">#59C0C0C0</color>
+    <color name="colorCirclePressed">#5974FF</color>
 </resources>
