--- a/app/src/main/res/layout/all_budgets_fragment_layout.xml
+++ b/app/src/main/res/layout/all_budgets_fragment_layout.xml
@@ -5,11 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+
     <FrameLayout
         android:id="@+id/listViewFrameAllBudgetsFragment"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="match_parent"
+        >
+
 
 
         <ListView
@@ -20,14 +23,6 @@
         </ListView>
 
 
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="10dp"
-            android:background="@drawable/header_shadow">
-
-        </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/listLoadingPanelAllBudgetsFragment"
@@ -50,7 +45,7 @@
     <android.support.design.widget.FloatingActionButton
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_margin="30dp"
-        android:id="@+id/addMainActivity"
+        android:id="@+id/addAllBudgetsFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:elevation="5dp"
