3/28/2017 11:25PM delete budget

--- a/app/src/main/res/layout-v21/swipe_views_layout.xml
+++ b/app/src/main/res/layout-v21/swipe_views_layout.xml
@@ -29,7 +29,8 @@
             android:layout_height="20dp"
             android:src="@drawable/options_dots_icon"
             android:clickable="true"
-            android:background="?android:attr/selectableItemBackground"/>
+            android:background="?android:attr/selectableItemBackgroundBorderless"
+            />
 
 
 
