--- a/app/src/main/res/layout/list_item_layout.xml
+++ b/app/src/main/res/layout/list_item_layout.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="5dp"
-    android:paddingLeft="30dp"
-    android:paddingRight="30dp"
+    android:paddingStart="20dp"
+    android:paddingEnd="20dp"
     android:paddingTop="5dp"
     android:background="@color/colorBackgroundList"
    >
