--- a/app/src/main/res/layout/add_category_dialog_layout.xml
+++ b/app/src/main/res/layout/add_category_dialog_layout.xml
@@ -72,6 +72,9 @@
                     android:id="@+id/editTextNameAddCategoryDialog"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:maxLength="25"
+                    android:inputType="textCapWords"
+                    android:imeOptions="actionDone"
                     android:textSize="14sp"
                     android:hint="@string/editTextHintAddCategoryDialog">
                 </EditText>
