--- a/app/src/main/res/layout/add_new_budget.xml
+++ b/app/src/main/res/layout/add_new_budget.xml
@@ -2,21 +2,128 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="30dp">
-    <TextView
-        android:paddingBottom="30dp"
-        android:id="@+id/titleAddNewBudget"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/addNewBudget"
-        android:textSize="20sp"/>
-    <EditText
-        android:id="@+id/editTextAddNewBudget"
+    android:focusableInTouchMode="true"
+    android:focusable="true"
+    android:background="@color/colorBackgroundList">
+    <LinearLayout
+        android:background="@color/colorPrimary"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textCapWords"
-        android:maxLength="50"
-        android:hint="@string/hintAddNewBudget"
-        android:textSize="14sp"/>
+        android:layout_height="50dp"
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/backButtonAddNewBudget"
+            android:layout_weight=".5"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/white_back_thin"
+            android:clickable="true"
+            android:paddingTop="17dp"
+            android:paddingBottom="17dp"
+            android:gravity="start"
+            android:background="?android:attr/selectableItemBackgroundBorderless"/>
+        <TextView
+            android:id="@+id/titleAddNewBudget"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_gravity="center"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:textStyle="bold"
+            android:textColor="#FFFFFF"
+            android:typeface="normal"
+            android:text="@string/createBudget"
+            android:textSize="20sp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@color/colorPrimary"
+            android:paddingStart="30dp"
+            android:paddingEnd="30dp">
+            <EditText
+                android:id="@+id/editTextAddNewBudget"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textCapWords"
+                android:imeOptions="actionDone"
+                android:maxLength="50"
+                android:hint="@string/hintAddNewBudget"
+                android:textSize="20sp"
+                android:padding="5dp"
+                android:background="@drawable/edit_text_light_background"
+                android:textCursorDrawable="@null"
+                android:textColorHint="@color/colorLightText"
+                android:textColor="@color/colorLightText"
+                android:layout_marginBottom="30dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_gravity="center_vertical"
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorLightText"
+                    android:textSize="16sp"
+                    android:text="Categories to add:"/>
+                <RelativeLayout
+                    android:layout_marginBottom="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <!--<Button
+                        android:layout_alignParentEnd="true"
+                        android:id="@+id/addCategoryAddNewBudget"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="@style/button_light"
+                        android:text="Add Category"/>-->
+                    <ImageView
+                        android:id="@+id/addCategoryAddNewBudget"
+                        android:layout_alignParentEnd="true"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/add_icon_white1"
+                        android:background="?android:attr/selectableItemBackgroundBorderless"/>
+                </RelativeLayout>
+            </LinearLayout>
+        </LinearLayout>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <ListView
+                    android:id="@+id/listViewAddBudget"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"/>
+                <Button
+                    android:layout_marginTop="20dp"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginEnd="30dp"
+                    android:layout_marginBottom="20dp"
+                    android:id="@+id/createAddNewBudget"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Create"
+                    style="@style/button"/>
+            </LinearLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                android:background="@drawable/header_shadow">
+
+            </RelativeLayout>
+        </FrameLayout>
+    </LinearLayout>
 </LinearLayout>
