--- a/app/src/main/res/layout/all_budgets_fragment_layout.xml
+++ b/app/src/main/res/layout/all_budgets_fragment_layout.xml
@@ -8,6 +8,7 @@
 
 
     <FrameLayout
+        android:layout_marginBottom="50dp"
         android:id="@+id/listViewFrameAllBudgetsFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
