--- a/app/src/main/res/layout/all_budgets_fragment_layout.xml
+++ b/app/src/main/res/layout/all_budgets_fragment_layout.xml
@@ -59,7 +59,7 @@
         app:borderWidth="0dp"
         android:src="@drawable/add_icon_white1"
         app:rippleColor="@color/colorCirclePressed"
-        app:backgroundTint="@color/colorPrimary"
+        app:backgroundTint="@color/colorListNeutral"
         android:layout_gravity="bottom|end"
         android:clickable="true" />
 
