--- a/app/src/main/res/drawable/button_focused.xml
+++ b/app/src/main/res/drawable/button_focused.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <solid
-        android:color="@color/colorPrimary"/>
+        android:color="@color/colorListNeutral"/>
     <padding android:left="7dp"
         android:top="7dp"
         android:right="7dp"
         android:bottom="7dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/colorPrimary" />
+        android:color="@color/colorListNeutral" />
     <corners android:radius= "8dp" />
 </shape>
