--- a/app/src/main/res/layout-v21/swipe_views_layout.xml
+++ b/app/src/main/res/layout-v21/swipe_views_layout.xml
@@ -9,7 +9,7 @@
         android:id="@+id/topBarSwipeViews"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorListNeutral"
         android:orientation="horizontal">
 
         <TextView
