--- a/app/src/main/res/layout/activity_display_category.xml
+++ b/app/src/main/res/layout/activity_display_category.xml
@@ -16,7 +16,7 @@
 
         <LinearLayout
 
-            android:background="@color/colorPrimary"
+            android:background="@color/colorListNeutral"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:orientation="horizontal"
@@ -68,7 +68,7 @@
                 >
 
                 <LinearLayout
-                    android:padding="20dp"
+                    android:padding="30dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
@@ -97,27 +97,28 @@
                                 android:textSize="20sp"
                                 />
 
-                            <RelativeLayout
+                            <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:orientation="horizontal">
 
                                 <TextView
-
+                                    android:layout_gravity="center_vertical"
                                     android:id="@+id/projectedTextViewDisplayCategory"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:textSize="20sp" />
 
                                 <ImageView
-                                    android:layout_alignParentEnd="true"
                                     android:id="@+id/editProjectedDisplayCategory"
+                                    android:layout_marginStart="20dp"
+                                    android:layout_gravity="center_vertical"
                                     android:layout_width="20dp"
                                     android:layout_height="20dp"
                                     android:clickable="true"
                                     android:src="@drawable/edit_icon"
                                     android:background="?android:attr/selectableItemBackground"/>
-                            </RelativeLayout>
+                            </LinearLayout>
 
                         </LinearLayout>
 
@@ -204,7 +205,7 @@
         app:borderWidth="0dp"
         android:src="@drawable/add_icon_white1"
         app:rippleColor="@color/colorCirclePressed"
-        app:backgroundTint="@color/colorPrimary"
+        app:backgroundTint="@color/colorListNeutral"
         android:layout_gravity="bottom|end"
         android:clickable="true"
         />
