--- a/app/src/main/res/layout/edit_projected_expenses.xml
+++ b/app/src/main/res/layout/edit_projected_expenses.xml
@@ -40,7 +40,7 @@
 
             <EditText
                 android:id="@+id/editTextEditProjectedExpenses"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
                 android:maxLength="10"
