--- a/app/src/main/res/layout/edit_projected_income.xml
+++ b/app/src/main/res/layout/edit_projected_income.xml
@@ -44,7 +44,7 @@
 
             <EditText
                 android:id="@+id/editTextEditProjectedIncome"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
                 android:maxLength="10"
