4/2/2017 12:52PM compatibility fixes

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#3F51B5</color>
     <color name="colorBackgroundList">#FFFFFF</color>
     <color name="colorListGreen">#1D6300</color>
-    <color name="colorListGreenDark">#133F00</color>
+    <color name="colorListGreenDark">#164C00</color>
     <color name ="colorListRed">#BC0000</color>
     <color name="colorListRedDark">#930000</color>
     <color name ="colorListNeutral">#3F51B5</color>
