--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,7 +64,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:textStyle="bold"
-                                android:text="@string/projectedExpenses"
+                                android:text="@string/projected_expenses"
                                 android:textColor="@color/colorLightText"/>
                             <TextView
                                 android:id="@+id/projectedValue"
@@ -81,7 +81,7 @@
                                 android:id="@+id/spent"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@string/totalSpent"
+                                android:text="@string/total_spent"
                                 android:textStyle="bold"
                                 android:textColor="@color/colorLightText"/>
                             <TextView
