--- a/app/src/main/res/layout/edit_projected_income.xml
+++ b/app/src/main/res/layout/edit_projected_income.xml
@@ -40,7 +40,7 @@
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/dollarSign"/>
+                android:text="@string/dollar_sign"/>
 
             <EditText
                 android:id="@+id/editTextEditProjectedIncome"
